--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header nav a {
 header nav a:hover, 
 header nav a:active {
     border-bottom: 3px solid #fff;
+    margin-bottom: -3px;
 }
 main {
     padding: 20px 15px;
