--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ header nav a {
     width: 33.33%;
     /* outline: 1px solid black; */
     text-align: center;
-    margin-bottom: 3px solid transparent;
     padding: 7px;
+    margin-bottom: 3px solid transparent;
 }
 header nav a:hover, 
 header nav a:active {
@@ -75,7 +75,7 @@ main ul li img {
     color: white;
     padding: 10px;
     text-align: center;
-    box-size: border-box;
+    box-sizing: border-box;
 }
 /* 사진에 이름 배치 */
 .item {
